[DIO-Santander-Bootcamp]- Semantica, tag textos e tag links

--- a/src/estudos/M-II_HTML_CSS3_JS/HTML5_CSS3/introducao/index.html
+++ b/src/estudos/M-II_HTML_CSS3_JS/HTML5_CSS3/introducao/index.html
@@ -7,6 +7,20 @@
     <title>Document</title>
   </head>
   <body>
-    Eduardo Riccetto
+    <header>
+      <h1>Eduardo Riccetto</h1>
+    </header>
+    <section>
+      <header>
+        <h2>Posts</h2>
+      </header>
+      <article>
+        <header>
+          <h3>Post #1</h3>
+        </header>
+        <p>Lorem Ipsum is simply <a href="https://www.linkedin.com/in/eduardo-peixoto-riccetto-094a53a2/" target="_blank">meu linkedin</a> dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially <a href="mailto:eduriccetto23@gmail.com">unchanged</a>. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+      </article>
+    </section>
+    <footer></footer>
   </body>
 </html>
