--- a/src/estudos/M-II_HTML_CSS3_JS/HTML5_CSS3/introducao/index.html
+++ b/src/estudos/M-II_HTML_CSS3_JS/HTML5_CSS3/introducao/index.html
@@ -23,6 +23,29 @@
         <p>Lorem Ipsum is simply <a href="https://www.linkedin.com/in/eduardo-peixoto-riccetto-094a53a2/" target="_blank">meu linkedin</a> dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially <a href="mailto:eduriccetto23@gmail.com">unchanged</a>. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
       </article>
     </section>
-    <footer></footer>
+    <footer>
+      <ul>
+        <li>
+          <a href="mailto:eduriccetto23@gmail.com">Eduardo Riccetto</a>
+        </li>
+        <li>
+          <a href=https://www.linkedin.com/in/eduardo-peixoto-riccetto-094a53a2/ target="_blank" rel="noopener noreferrer">Linkedin eduriccetto</a>
+        </li>
+        <li>
+          <a href="https://github.com/eduriccetto" target="_blank">GitHub eduriccetto</a>
+        </li>
+      </ul>
+      <ol>
+        <li>
+          <a href="mailto:eduriccetto23@gmail.com">Eduardo Riccetto</a>
+        </li>
+        <li>
+          <a href=https://www.linkedin.com/in/eduardo-peixoto-riccetto-094a53a2/ target="_blank" rel="noopener noreferrer">Linkedin eduriccetto</a>
+        </li>
+        <li>
+          <a href="https://github.com/eduriccetto" target="_blank">GitHub eduriccetto</a>
+        </li>
+      </ol>
+    </footer>
   </body>
 </html>
