--- a/src/estudos/M-II_HTML_CSS3_JS/HTML5_CSS3/introducao/index.html
+++ b/src/estudos/M-II_HTML_CSS3_JS/HTML5_CSS3/introducao/index.html
@@ -4,20 +4,21 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Eduardo Riccetto</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <header>
       <img src="img/perfil.png" alt="Ilustração do perfil do autor">
-      <h1>Eduardo Riccetto</h1>
+      <h1 id="title">Eduardo Riccetto</h1>
     </header>
     <section>
       <header>
-        <h2>Posts</h2>
+        <h2 class="subtitle">Posts</h2>
       </header>
       <article>
         <header>
-          <h3>Post #1</h3>
+          <h3 class="post_title">Post #1</h3>
           <img src="img/htmlCode.jpg" alt="Editor de codigo contendo html">
         </header>
         <p>Lorem Ipsum is simply <a href="https://www.linkedin.com/in/eduardo-peixoto-riccetto-094a53a2/" target="_blank">meu linkedin</a> dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially <a href="mailto:eduriccetto23@gmail.com">unchanged</a>. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
