[DIO-Santander-Bootcamp]- justfy content2

--- a/src/estudos/M-II_HTML_CSS3_JS/A2_FlexboxEmCSS/4-justfyContent.html
+++ b/src/estudos/M-II_HTML_CSS3_JS/A2_FlexboxEmCSS/4-justfyContent.html
@@ -5,6 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fundamentos - justfy-content</title>
     <style>
+
+        .caixa{
+            background-color: green;
+            border: 1px solid black;
+            text-align: center;
+            color: white;
+        }
         .container{
             max-width: 750px;
             border: 1px solid black;
@@ -19,6 +26,13 @@
             color: white;
             width: 100px;
             height: 100px;
+        }
+
+        .item2{
+            background-color: blueviolet;
+            margin: 5px;
+            text-align: center;
+            color: white;
         }
 
         .flex-start{
@@ -40,9 +54,18 @@
         .space-around{
             justify-content: space-around;
         }
+
+        .column{
+            flex-direction: column;
+            min-height: 200px;
+        }
     </style>
 </head>
 <body>
+    <div>
+        <h1 class="caixa">row</h1>
+    </div>
+    <br>
     <h1>flex-start</h1>
     <section class="container flex-start">
         <div class="item">item 1</div>
@@ -88,5 +111,66 @@
         <div class="item">item 5</div>
 
     </section>
+
+    <br>
+    <div>
+        <h1 class="caixa">column</h1>
+    </div>
+    <br>
+
+    <h1>flex-start (column)</h1>
+    <section class="container flex-start column">
+        <div class="item2">item 1</div>
+        <div class="item2">item 2</div>
+        <div class="item2">item 3</div>
+        <div class="item2">item 4</div>
+        <div class="item2">item 5</div>
+
+    </section>
+
+    <h1>flex-end (column)</h1>
+    <section class="container flex-end column">
+        <div class="item2">item 1</div>
+        <div class="item2">item 2</div>
+        <div class="item2">item 3</div>
+        <div class="item2">item 4</div>
+        <div class="item2">item 5</div>
+
+    </section>
+
+    <h1>flex-center (column)</h1>
+    <section class="container flex-center column">
+        <div class="item2">item 1</div>
+        <div class="item2">item 2</div>
+        <div class="item2">item 3</div>
+        <div class="item2">item 4</div>
+        <div class="item2">item 5</div>
+
+    </section>
+
+    <h1>space-between (column)</h1>
+    <section class="container space-between column">
+        <div class="item2">item 1</div>
+        <div class="item2">item 2</div>
+        <div class="item2">item 3</div>
+        <div class="item2">item 4</div>
+        <div class="item2">item 5</div>
+
+    </section>
+
+    <h1>space-around (column)</h1>
+    <section class="container space-around column">
+        <div class="item2">item 1</div>
+        <div class="item2">item 2</div>
+        <div class="item2">item 3</div>
+        <div class="item2">item 4</div>
+        <div class="item2">item 5</div>
+
+    </section>
+
+    <br>
+    <div>
+        <h1 class="caixa">FIM</h1>
+    </div>
 </body>
 </html>
